feat: Add css style_2 Product_landing_page (FCC-RWD)

--- a/Responsive web design/Product_Landing_Page/styles.css
+++ b/Responsive web design/Product_Landing_Page/styles.css
@@ -89,7 +89,7 @@
     border-style: solid;
     border-color: brown;
 }
-box-icon{
+.bi{
     margin-right: 20px;
-    margin-left: 50px;
+    margin-left: 20px;
 }
