--- a/Responsive web design/Product_Landing_Page/styles.css
+++ b/Responsive web design/Product_Landing_Page/styles.css
@@ -1,32 +1,40 @@
+body{
+    background-color: #EEEEEE;
+    width: 100%;
+    margin: 0%;
+}
+
 #header{
+    background-color: #EEEEEE;
+    margin: 0px;
+    position: fixed;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    border-style: solid;
-    border-color: brown;
+
 }
 @media (max-width:700px) {
     #header{
+        text-align: center;
         display: flex;
         flex-direction: column;
-        border-style: solid;
-        border-color: brown;
+
     }
 }
 /*
-    border-style: solid;
-    border-color: brown;
+border-style: solid;
+border-color: brown;
 */
 #logo{
+    width: 300px;
     flex: 1;
-    border-style: solid;
-    border-color: brown;
+
 }
 #nav-bar{
     display: flex;
     flex: 2;
     justify-content: flex-end;
-    border-style: solid;
-    border-color: brown;
+
 }
 @media (max-width:700px) {
     #nav-bar{
@@ -34,36 +42,92 @@
         flex-direction: column;
         flex: 2;
         align-items: center;
+    }
+    #cards{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 100%;
+        width: 100%;
+
+    }
+    #form{
+        padding-top: 100px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        
+    }
+    .nav-link{
+        padding: 0px;
+        margin: 0px;
+        height: 20px;
+        font-size: 15px;
         border-style: solid;
-        border-color: brown;
+        border-color: #EEEEEE;
+        background-color: #EEEEEE;
+        max-width: 100%;
+        width: 150px;
     }
 }
 .nav-link{
-    border: solid 2px coral;
+    padding: 20px;
+    border-style: solid;
+    border-color: #EEEEEE;
+    background-color: #EEEEEE;
     max-width: 100%;
-    width: 20%;
+    width: 150px;
 }
 
 #form{
-    border-style: solid;
-    border-color: brown;
+
     display: flex;
     align-items: center;
     flex-direction: column;
     width: 100%;
-
+    
 }
 #form h2{
-    border-style: solid;
-    border-color: brown;
+    margin-top: 100px;
+
     max-width: 100%;
-    width: 400px;
+    width: 500px;
+    font-size: 20px;
+    text-align: center;
 }
 #email{
     width: 250px;
+    height: 20px;
 }
 #submit{
-    width: 200px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    width: 150px;
+    height: 30px;
+    border-style: solid;
+    background-color: #f1c40f;
+    border-color: #f1c40f;
+    font-size: 15px;
+}
+#submit:hover{
+    animation: submitGet 2s alternate;
+    animation-timing-function: linear;
+    background-color: coral;
+    border-color: coral;
+    transition-delay: 1s;
+}
+@keyframes submitGet {
+    0%{
+    }
+    50%{
+        background-color: coral;
+        border-color: coral;
+    }
+    100%{
+        background-color: coral;
+        border-color: coral;
+    }
 }
 
 .material-symbols-outlined {
@@ -86,10 +150,57 @@
     align-items: center;
     max-width: 100%;
     width: 700px;
-    border-style: solid;
-    border-color: brown;
+
 }
 .bi{
     margin-right: 20px;
     margin-left: 20px;
+}
+#video{
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+}
+#cards{
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    max-width: 100%;
+    width: 100%;
+}
+#card{
+    border-width: 1px;
+    border-style: solid;
+    margin: 20px;
+    text-align: center;
+    width: 300px;
+}
+#Title-card{
+    margin: 0%;
+    padding: 15px;
+    background-color: rgb(226, 226, 226);
+    height: 20px;
+    font-size: 15px;
+}
+#Submit-Card{
+    width: 100px;
+    height: 30px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    border-style: solid;
+    background-color: #f1c40f;
+    border-color: #f1c40f;
+    font-size: 15px;
+}
+#Submit-Card:hover{
+    animation: submitGet 2s alternate;
+    animation-timing-function: linear;
+    background-color: coral;
+    border-color: coral;
+    transition-delay: 1s;
+}
+footer{
+    background-color: #dbd9d9;
+    width: 100%;
+    height: 60px;
 }
