--- a/Responsive web design/Product_Landing_Page/styles.css
+++ b/Responsive web design/Product_Landing_Page/styles.css
@@ -2,6 +2,7 @@ body{
     background-color: #EEEEEE;
     width: 100%;
     margin: 0%;
+    font-family: 'Roboto', monospace;
 }
 
 #header{
@@ -25,7 +26,8 @@ body{
 border-style: solid;
 border-color: brown;
 */
-#logo{
+#header-img{
+    margin-top: 20px;
     width: 300px;
     flex: 1;
 
@@ -34,8 +36,8 @@ border-color: brown;
     display: flex;
     flex: 2;
     justify-content: flex-end;
-
 }
+
 @media (max-width:700px) {
     #nav-bar{
         display: flex;
@@ -43,7 +45,7 @@ border-color: brown;
         flex: 2;
         align-items: center;
     }
-    #cards{
+    #Pricing{
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -60,6 +62,8 @@ border-color: brown;
         
     }
     .nav-link{
+        text-decoration: none;
+        color: black;
         padding: 0px;
         margin: 0px;
         height: 20px;
@@ -72,6 +76,8 @@ border-color: brown;
     }
 }
 .nav-link{
+    text-decoration: none;
+    color: black;
     padding: 20px;
     border-style: solid;
     border-color: #EEEEEE;
@@ -137,14 +143,14 @@ border-color: brown;
   'GRAD' 2,
   'opsz' 200,
 }
-.features{
+#features{
     display: flex;
     /*! En el uso de justify content el centrado es cuando se encuentra cun una direccion en row*/
     /*! En el uso de Aling items el centrado es cuando se encuentra cun una direccion en column*/
     flex-direction: column;
     align-items: center;
 }
-.features div{
+#features div{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -156,14 +162,14 @@ border-color: brown;
     margin-right: 20px;
     margin-left: 20px;
 }
-#video{
+#How-it-works{
     margin-top: 40px;
     display: flex;
     justify-content: center;
 }
-#cards{
-    margin-top: 30px;
+#Pricing{
     display: flex;
+    margin-top: 30px;
     justify-content: center;
     max-width: 100%;
     width: 100%;
@@ -174,6 +180,7 @@ border-color: brown;
     margin: 20px;
     text-align: center;
     width: 300px;
+    margin-bottom: 40px;
 }
 #Title-card{
     margin: 0%;
@@ -202,5 +209,21 @@ border-color: brown;
 footer{
     background-color: #dbd9d9;
     width: 100%;
-    height: 60px;
+    height: 90px;
+}
+
+#items{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+#items a{
+    margin-top: 10px;
+    margin-right: 20px;
+}
+#copy{
+    margin-top: 0%;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 20px;
 }
